overflow correction

--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ color: rgba(255, 255, 255, 0.5);
         flex-direction: column;
     }
     body{
-        overflow: hidden;
+        overflow-x: hidden;
     }
 
 }
